--- a/ccnd.html
+++ b/ccnd.html
@@ -62,7 +62,7 @@
 </table>
     <br>
     <div class="imgL"><img id=map src="https://www1.cbn.com/sites/default/files/styles/video_ratio_16_9/public/media/slider/images/hurricanemichael_hdv.jpg?itok=w0H5jHkY" width="600"></div>
-    <div class="imgR"><img id=map src="hurrflorence.jpeg" width="600"></div>
+    <div class="imgR"><img id=map src="hurrflorence.png" width="600"></div>
       <br>
       <br>
       <br>
