--- a/nat.html
+++ b/nat.html
@@ -3,17 +3,17 @@
   <head>
 ​
     <link rel = "stylesheet" href = "nat.css">
-    <link rel = "stylesheet" href = "Home.css">
+    <link rel = "stylesheet" href = "home.css">
     <link href = "https://fonts.googleapis.com/css?family=Dosis&display=swap" rel = "stylesheet">
 ​
   </head>
   <body>
     <!-- <div id=first><h1>Air Pollution</h1></div> -->
     <div class= "navbar">
-      <img id = img src = "Enviroyou.png" width = "120">
+      <img id = img src = "enviroyou.png" width = "120">
       <div id = primero class = "fixed">Climate Change<br>& Natural Disasters</div></div>
       <div class="topnav">
-      <a class="active" href="Home.html">Home</a>
+      <a class="active" href="home.html">Home</a>
       <a href="ocean.html">Ocean</a>
       <a href="air.html">Air Pollution</a>
       <a href="nat.html">Climate Change & Natural Disasters</a>
