--- a/ocean.html
+++ b/ocean.html
@@ -31,7 +31,7 @@ p.ex1 {
 <body>
 
   <div class= "navbar" >
-    <img id = "img" src = "Enviroyou.png" width = "120">
+    <img id = "img" src = "enviroyou.png" width = "120">
     <div id = "primero" class = "fixed">Ocean</div>
       <!-- <a class="active" href="#home">Home</a>
       <a href="ocean.html">Ocean</a>
