--- a/air.html
+++ b/air.html
@@ -21,7 +21,7 @@
           <div id="first"class="fixed">Air Pollution</div>
     </div>
     <div class="topnav">
-      <a class="active" href="home.html">Home</a>
+      <a class="active" href="index.html">Home</a>
       <a href="ocean.html">Ocean</a>
       <a href="air.html">Air Pollution</a>
       <a href="nat.html">Climate Change & Natural Disasters</a>
