--- a/nat.html
+++ b/nat.html
@@ -13,7 +13,7 @@
       <img id = img src = "enviroyou.png" width = "120">
       <div id = primero class = "fixed">Climate Change<br>& Natural Disasters</div></div>
       <div class="topnav">
-      <a class="active" href="home.html">Home</a>
+      <a class="active" href="index.html">Home</a>
       <a href="ocean.html">Ocean</a>
       <a href="air.html">Air Pollution</a>
       <a href="nat.html">Climate Change & Natural Disasters</a>
