--- a/ocean.html
+++ b/ocean.html
@@ -39,7 +39,7 @@ p.ex1 {
       <a href="#climate change & Natural Disasters">Climate Change & Natural Disasters</a> -->
    </div>
     <div class="topnav">
-    <a class="active" href="home.html">Home</a>
+    <a class="active" href="index.html">Home</a>
     <a href="ocean.html">Ocean</a>
     <a href="air.html">Air Pollution</a>
     <a href="nat.html">Climate Change & Natural Disasters</a>
